* Fixed left sides vertical links visibility

--- a/sites/default/themes/burarum/sass/global.scss
+++ b/sites/default/themes/burarum/sass/global.scss
@@ -24,7 +24,7 @@ body {
   color:$fontColor;
   font-size:$fontSize;
   background:url('../gfx/view-port-background.gif') repeat-x left top;
-  margin:0;
+  margin:0 0 0 30px;
 }
 
 /* GENERIC STUFF */
